--- a/src/style.css
+++ b/src/style.css
@@ -80,4 +80,17 @@ img {
 	font-weight: 400;
 	line-height: 1.11em;
 	letter-spacing: -1.4px;
+	padding-inline: 1rem;
+}
+
+.divider {
+	width: 100%;
+	border-top: 2px solid #0c0d0e7a;
+	margin-top: 2rem;
+}
+
+@media (max-width: 600px) {
+	.quote {
+		font-size: 36px;
+	}
 }
