--- a/src/style.css
+++ b/src/style.css
@@ -44,8 +44,12 @@ h1 {
 
 h2 {
 	font-size: 30px;
-	font-weight: 400;
+	font-weight: 500;
 	line-height: 1.289em;
+}
+
+h3 {
+	font-weight: 400;
 }
 
 p {
